# ambient_world

./: Cargo.toml
.github/: copilot-instructions.md
crates/ambient_core/: Cargo.toml
crates/ambient_core/src/: engine.rs  events.rs  world.rs
crates/app/: Cargo.toml
crates/app/src/: api.rs  main.rs  runtime.rs
crates/audio/: Cargo.toml
crates/audio/src/: engine.rs  layers.rs  lib.rs  params.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  world.rs
docs/: architecture.md  demo.md  notes.md
ui/src/: App.css  App.tsx  index.css
ui/src/ws/: connection.ts
