[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
audio = { version = "0.1.0", path = "../audio" }
axum = { version = "0.8.8", features = ["macros", "ws"] }
ambient_core = { version = "0.1.0", path = "../ambient_core" }
futures-util = "0.3.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
